# Acorn

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  Acorn.sln  AcornProfile-Startup.json  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  TODO.md  awk.exe.stackdump  cmake-variants.yaml  imgui-thecherno-2021.diff  imgui.ini  meson.build  meson_options.txt  premake5.lua  requirements.txt  vcpkg.json  vcpkg.json.bak
Acorn/: Acorn.vcxproj  Acorn.vcxproj.filters  CMakeLists.txt  cpp.hint  meson.build  premake5.lua
Acorn/Acorn/: Acorn.vcxproj  Acorn.vcxproj.filters
Acorn/cmake/: AcornConfig.cmake.in
Acorn/include/: Acorn.h  acorn_export.h  meson.build
Acorn/include/Acorn/core/: Application.h  Core.h  CoreConfig.h  EntryPoint.h  Platform.h  Timestep.h
Acorn/include/Acorn/debug/: FrameProfiler.h
Acorn/include/Acorn/ecs/: Entity.h
Acorn/include/Acorn/events/: MouseEvent.h
Acorn/include/Acorn/gui/: ImGuiLayer.h
Acorn/include/Acorn/input/: Input.h  KeyCodes.h
Acorn/include/Acorn/physics/: Collider.h
Acorn/include/Acorn/renderer/: BatchRenderer.h  Camera.h  DebugRenderer.h  EditorCamera.h  GraphicsContext.h  RenderCommand.h  Renderer.h  UniformBuffer.h
Acorn/include/Acorn/utils/: FileUtils.h  MathUtils.h  debugbreak.h  md5.h
Acorn/include/platform/glfw/: GLFWPlatform.h
Acorn/include/platform/opengl/: OpenGLFrameProfiler.h  OpenGLPlatformCapabilities.h  OpenGLRendererApi.h  OpenGLShader.h  OpenGLTexture.h
Acorn/include/platform/windows/: WindowsPlatform.h
Acorn/res/shaders/: Basic.shader  FlatColor.shader  Textured.shader
Acorn/src/: Acorn.h  acorn_export.h  acpch.h  mappingData.json  meson.build
Acorn/src/Acorn/assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h
Acorn/src/Acorn/core/: Application.cpp  Application.h  Core.h  CoreConfig.h  EntryPoint.h  Log.cpp  Log.h  Platform.cpp  Platform.h  Timestep.cpp  UUID.cpp  UUID.h  Window.h
Acorn/src/Acorn/debug/: FrameProfiler.cpp  Instrumentor.h  Timer.h
Acorn/src/Acorn/ecs/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
Acorn/src/Acorn/events/: ApplicationEvent.h  Event.h  KeyEvent.h
Acorn/src/Acorn/gui/: GUITools.cpp  GUITools.h  ImGuiBuild.cpp  ImGuiLayer.cpp
Acorn/src/Acorn/layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Acorn/src/Acorn/math/: Math.cpp  Math.h
Acorn/src/Acorn/physics/: Collider.cpp
Acorn/src/Acorn/renderer/: BatchRenderer.h  Buffer.cpp  Buffer.h  Camera.cpp  DebugRenderer.cpp  DebugRenderer.h  EditorCamera.cpp  Framebuffer.cpp  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  RendererApi.cpp  RendererApi.h  Shader.cpp  Texture.cpp  Texture.h  UniformBuffer.cpp  VertexArray.cpp  VertexArray.h
Acorn/src/Acorn/serialize/: Serializer.cpp  Serializer.h
Acorn/src/Acorn/templates/: OrthographicCameraController.cpp  OrthographicCameraController.h
Acorn/src/Acorn/utils/: FileUtils.cpp  FileUtils.h  FixedQueue.h  MathUtils.cpp  PlatformCapabilities.cpp  PlatformCapabilities.h  PlatformUtils.h  ThreadSafeQueue.h  md5.cpp  md5.h
Acorn/src/core/: Application.cpp  Application.h  Core.h  CoreConfig.h  EntryPoint.h  Log.cpp  Log.h  Platform.cpp  Timestep.h  Window.h
Acorn/src/debug/: Instrumentor.h
Acorn/src/ecs/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
Acorn/src/ecs/components/: Components.h  SceneCamera.cpp  SceneCamera.h  ScriptableEntity.h
Acorn/src/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Acorn/src/gui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Acorn/src/gui/nodes/: ImGuiNodes.cpp  ImGuiNodes.h
Acorn/src/gui/terminal/: Terminal.h
Acorn/src/input/: MouseButtonCodes.h
Acorn/src/layer/: Layer.h  LayerStack.h
Acorn/src/math/: Math..h  Math.cpp
Acorn/src/pch/: acpch.h
Acorn/src/platform/glfw/: GLFWPlatform.cpp  GLFWPlatformUtils.cpp
Acorn/src/platform/opengl/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLFrameProfiler.cpp  OpenGLPlatformCapabilities.cpp  OpenGLPlatformCapabilities.h  OpenGLRendererApi.cpp  OpenGLRendererApi.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGlShader.cpp  (+1 more)
Acorn/src/renderer/: BatchRenderer.h  Buffer.h  Camera.cpp  Camera.h  DebugRenderer.cpp  EditorCamera.cpp  Framebuffer.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.h  VertexArray.h
Acorn/src/serialize/: Serializer.cpp
Acorn/src/templates/: OrthographicCameraController.cpp
Acorn/src/utils/: FileUtils.cpp  FileUtils.h  PlatformCapabilities.cpp  PlatformUtils.h
Acorn/tools/: README.md
Acorn/tools/IDLParser/: meson.build  tpl_generator.py
Acorn/tools/test/: test.webidl
OakTree/: AcornProfile-Shutdown.json  AcornProfile-Startup.json  CMakeLists.txt  OakTree.vcxproj  OakTree.vcxproj.filters  acorn-project.yaml  imgui.ini  meson.build  premake5.lua
OakTree/OakTree/: OakTree.vcxproj
OakTree/res/scenes/: Example.acorn  Example2.acorn  PhysicsTest.acorn  PinkCube.acorn  Test.acorn
OakTree/res/scripts/: camera.js  camera.ts  declarations.d.ts  spriteTest.js  test.js  test.js.bak  test.ts
OakTree/res/shaders/: BIllboard.shader  Basic.shader  Circle.shader  Textured.shader
OakTree/src/: OakLayer.cpp  OakLayer.h  OakTree.cpp  imgui.ini  meson.build
OakTree/src/panels/: ContentBrowser.cpp  ContentBrowser.h  LogPanel.cpp  LogPanel.h  SceneHierarchy.cpp  SceneHierarchy.h  ShapeEditor.cpp  ShapeEditor.h
OakTree/tools/: renderdoc.cap
Ultralight/: CMakeLists.txt
Ultralight/assets/: app.html
Ultralight/cmake/: Ultralight.cmake
Ultralight/src/: GPUDriverImpl.cpp  GPUDriverImpl.h  MyApp.cpp  MyApp.h  OGLGPUDriver.cpp  OGLGPUDriver.h  UltralightLayer.cpp  UltralightLayer.h  UltralightTest.cpp
tests/: meson.build  test_main.cpp
tests/integrationtests/: meson.build
tests/integrationtests/src/: BasicApplication.cpp  BasicLayer.cpp  BasicLayer.h
tests/unittests/: meson.build
tests/unittests/layer/: LayerStack.cpp
(+161 files in other folders)
